@startuml

title __A8's Class Diagram__\n

  package binarySearchTree {
    class BinarySearchTreeArrayEmbedding {
    }
  }
  

  package binarySearchTree {
    interface BinarySearchTreeI {
    }
  }
  

  package binarySearchTree {
    class BinarySearchTreeNodeLinking {
    }
  }
  

  package binarySearchTree {
    class NodeArrayEmbedding {
    }
  }
  

  package binarySearchTree {
    interface NodeI {
    }
  }
  

  package binarySearchTree {
    class NodeNodeLinking {
    }
  }
  

  package binarySearchTree {
    enum PrintVariant {
    }
  }
  

  BinarySearchTreeArrayEmbedding -up-|> BinarySearchTreeI
  BinarySearchTreeNodeLinking -up-|> BinarySearchTreeI
  BinarySearchTreeNodeLinking o-- NodeNodeLinking : root
  NodeArrayEmbedding -up-|> Comparable
  NodeArrayEmbedding -up-|> NodeI
  NodeNodeLinking -up-|> Comparable
  NodeNodeLinking -up-|> NodeI
  NodeNodeLinking o-- NodeNodeLinking : left
  NodeNodeLinking o-- NodeNodeLinking : right
  NodeNodeLinking o-- NodeNodeLinking : father


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
